# qrt-challenge-2025

./: .gitignore  Benchmark_nqBJ7fO (1).ipynb  Benchmark_nqBJ7fO.ipynb  EDA.ipynb  Result.xlsx  Untitled-1.ipynb  archive.xlsx  dev.ipynb  grid_search.ipynb  juyter version.ipynb  lr_finder_checkpoint_2025-3-6_18-5-32_NbrnTP3fAbnFbmOHnKYa.pt  main.py  pyproject.toml  requirements.txt  try.ipynb
archive/: Benchmark_nqBJ7fO (1).ipynb  Benchmark_nqBJ7fO.ipynb  DeepHit.ipynb  Multirsf.ipynb  cox-ph copy.ipynb  dev.ipynb  shap.ipynb  try.ipynb  viz.ipynb
data/: Analyse.csv  returns.csv
output/: 0_20_gradiant_7_8_None_sqrt_subsample55_305_305.csv  100_gradiant_7_8_sqrt_subsample5_335.csv  10_10_gradiant_7_8_None_sqrt_subsample55_305_305.csv  10_gradiant_73_8_sqrt_subsample5_335.csv  10_gradiant_7_75_sqrt_subsample5_335.csv  10_gradiant_7_85_sqrt_subsample5_335.csv  10_gradiant_7_8_sqrt_subsample45_335.csv  10_gradiant_7_8_sqrt_subsample50_335.csv  10_gradiant_7_8_sqrt_subsample55_330.csv  10_gradiant_7_8_sqrt_subsample55_450_rs_16.csv  10_gradiant_7_8_sqrt_subsample60_335.csv  10_gradiant_7_95_sqrt_subsample55_450_rs_16.csv  126-20_20_gradiant_7-8_None_sqrt_subsample55_305.csv  1gradiant_7-8_None_sqrt_subsample6_addcreatedfeatures.csv  1gradiant_75-8_None_sqrt_subsample6.csv  20250126121424_boosted_20_models_size7_sample7.csv  20250126121424_boosted_20_models_size7_sample8_with_subsample.csv  20250126121424_boosted_20_models_size999_sample7.csv  20250126121424_boosted_20_models_size999_sample7_with_subsample.csv  20_20_double_gradiant_7-7_None_sqrt.csv  (+203 more)
src/: deep.py  (+4 more)
(+15 files in other folders)
